Change from Headless Chrome with CDP to Puppeteer. Use serverless for deployment at AWS

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ node_modules/
 .elasticbeanstalk/
 .ebextensions/
 .idea/
+
+# package directories
+node_modules
+jspm_packages
+
+# Serverless directories
+.serverless
