--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-  "author": "Prerender.io",
-  "name": "prerender",
+  "author": "sames",
+  "name": "prerender-puppeteer-sls",
   "description": "Service to prerender Javascript rendered pages for SEO",
   "version": "5.6.0",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/prerender/prerender"
+    "url": "https://github.com/sambrezo/prerender"
   },
   "dependencies": {
     "body-parser": "~1.18.3",
+    "chrome-aws-lambda": "^2.0.1",
     "chrome-remote-interface": "~0.25.7",
     "compression": "~1.7.3",
     "express": "~4.16.3",
     "he": "~1.1.1",
+    "prerender-aws-s3-cache": "^1.0.1",
+    "puppeteer-core": "^2.0.0",
+    "serverless-http": "^2.3.0",
     "valid-url": "~1.0.9"
   },
   "devDependencies": {
     "mocha": "^5.2.0",
+    "puppeteer": "^2.0.0",
+    "serverless-offline": "^5.12.0",
     "sinon": "^6.1.4"
   },
   "scripts": {
